--- a/data/en/banner.yml
+++ b/data/en/banner.yml
@@ -4,7 +4,7 @@ banner:
   icon : "" # themify icon pack : https://themify.me/themify-icons
   title : "Tu charcutería de confianza"
   content : "Desde 1967. Trabajamos con los mejores productos
-nacionales y de importación. Elaboramos nuestros jamones de manera tradicional
+nacionales y de importación. Elaboramos jamones de manera tradicional
 					en nuestro secadero natural."
   button:
     enable : true
